aws-cloudfront/virtual-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
  name: keycloak
  namespace: keycloak
spec:
  gateways:
  - istio-system/general-gateway
  hosts:
  - 'keycloak.cloud.fredgentech.com'
  http:
  - retries:
      attempts: 3
      perTryTimeout: 2s
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: keycloak-http
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
  name: sonarqube
  namespace: sonarqube
spec:
  gateways:
  - istio-system/general-gateway
  hosts:
  - 'sonarqube.cloud.fredgentech.com'
  http:
  - retries:
      attempts: 3
      perTryTimeout: 2s
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: sonarqube-sonarqube
        port:
          number: 9000
---
apiVersion: networking.istio.io/v1alpha3 #networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd
  namespace: argocd
spec:
  gateways:
    - istio-system/general-gateway
  hosts:
    - argocd.cloud.fredgentech.com
  http:
    - route:
      - destination:
          host: argocd-server
          port:
            number: 80
